force-app/main/default/objects/Policy_Claim__c/fields/Supplemental_Payments__c.field-meta.xml
<CustomField>
    <fullName>Supplemental_Payments__c</fullName>
    <formula>GL_5051__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplemental Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>