force-app/main/default/objects/Policy_Claim__c/fields/Total_Open_Reserve_Entries__c.field-meta.xml
<CustomField>
    <fullName>Total_Open_Reserve_Entries__c</fullName>
    <description>How much entries of Open Reserve on a claim.</description>
    <label>Total Open Reserve Entries</label>
    <summaryFilterItems>
        <field>Policy_Claim_Detail__c.Type__c</field>
        <operation>equals</operation>
        <value>Open Reserve</value>
    </summaryFilterItems>
    <summaryForeignKey>Policy_Claim_Detail__c.Policy_Claim__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>