force-app/main/default/objects/Policy_Claim__c/fields/Total_Reserve_Direct_Loss__c.field-meta.xml
<CustomField>
    <fullName>Total_Reserve_Direct_Loss__c</fullName>
    <label>Total Reserve Direct Loss</label>
    <summarizedField>Policy_Claim_Detail__c.Loss_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Policy_Claim_Detail__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Reserve</value>
    </summaryFilterItems>
    <summaryForeignKey>Policy_Claim_Detail__c.Policy_Claim__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>