force-app/main/default/objects/Policy_Claim__c/fields/Type_of_Error__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Error__c</fullName>
    <label>Type of Error</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admistrative Error</fullName>
            </value>
            <value>
                <fullName>Intentional Wrong</fullName>
            </value>
            <value>
                <fullName>Substantive Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>