force-app/main/default/objects/Policy_Claim__c/fields/ULAE__c.field-meta.xml
<CustomField>
    <fullName>ULAE__c</fullName>
    <label>ULAE</label>
    <summarizedField>Policy_Claim_Detail__c.LAE_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Policy_Claim_Detail__c.Type__c</field>
        <operation>equals</operation>
        <value>ARDC Payment</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Policy_Claim_Detail__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Unallocated LAE</value>
    </summaryFilterItems>
    <summaryForeignKey>Policy_Claim_Detail__c.Policy_Claim__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>