force-app/main/default/objects/Policy_Claim__c/fields/Unpaid_Reserve_Ceded_Loss__c.field-meta.xml
<CustomField>
    <fullName>Unpaid_Reserve_Ceded_Loss__c</fullName>
    <label>Unpaid Reserve Ceded Loss</label>
    <summarizedField>Policy_Claim_Detail__c.Reinsurance_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Policy_Claim_Detail__c.Type__c</field>
        <operation>equals</operation>
        <value>Change in Ceded Loss Reserve</value>
    </summaryFilterItems>
    <summaryForeignKey>Policy_Claim_Detail__c.Policy_Claim__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>