force-app/main/default/objects/Policy_Claim__c/fields/WatchListCode__c.field-meta.xml
<CustomField>
    <fullName>WatchListCode__c</fullName>
    <label>Watch List</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appeal</fullName>
            </value>
            <value>
                <fullName>ARDC</fullName>
            </value>
            <value>
                <fullName>ARDC/To Be Closed</fullName>
            </value>
            <value>
                <fullName>Check Fraud</fullName>
            </value>
            <value>
                <fullName>Check Fraud/TBClosed</fullName>
            </value>
            <value>
                <fullName>Dep Asst</fullName>
            </value>
            <value>
                <fullName>Dep Asst/TBC</fullName>
            </value>
            <value>
                <fullName>DJ</fullName>
            </value>
            <value>
                <fullName>DJ on Appeal</fullName>
            </value>
            <value>
                <fullName>Duplicate Setup</fullName>
            </value>
            <value>
                <fullName>FDCPA</fullName>
            </value>
            <value>
                <fullName>FDCPA-Suesz</fullName>
            </value>
            <value>
                <fullName>No Tender</fullName>
            </value>
            <value>
                <fullName>SCIL</fullName>
            </value>
            <value>
                <fullName>Subrogation</fullName>
            </value>
            <value>
                <fullName>To Be Closed</fullName>
            </value>
            <value>
                <fullName>Wills/Trusts/Estates</fullName>
            </value>
            <value>
                <fullName>Wire Fraud</fullName>
            </value>
            <value>
                <fullName>Wire Fraud/TBClosed</fullName>
            </value>
            <value>
                <fullName>e/File</fullName>
            </value>
            <value>
                <fullName>e/File To Be Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>