force-app/main/default/objects/Policy_Claim__c/fields/Write_Off__c.field-meta.xml
<CustomField>
    <fullName>Write_Off__c</fullName>
    <label>Write Off</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>