force-app/main/default/objects/Policy_Claim__c/fields/X1st_Dollar_Applied__c.field-meta.xml
<CustomField>
    <fullName>X1st_Dollar_Applied__c</fullName>
    <formula>ABS( GL_5030__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>1st Dollar Applied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>