force-app/main/default/objects/Policy_Claim__c/recordTypes/Incident.recordType-meta.xml
<RecordType>
    <fullName>Incident</fullName>
    <active>true</active>
    <label>Incident</label>
</RecordType>