force-app/main/default/objects/Policy_Claim__c/validationRules/Claim_Made_Date_Cant_greater_than_today.validationRule-meta.xml
<ValidationRule>
    <fullName>Claim_Made_Date_Cant_greater_than_today</fullName>
    <active>true</active>
    <errorConditionFormula>Claim_Made_Date__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Claim_Made_Date__c</errorDisplayField>
    <errorMessage>&apos;Claim Made Date&apos; should not be Greater than today.</errorMessage>
</ValidationRule>