force-app/main/default/objects/Policy_Claim__c/validationRules/Claim_ReserveLAE_must_be_possitive.validationRule-meta.xml
<ValidationRule>
    <fullName>Claim_ReserveLAE_must_be_possitive</fullName>
    <active>false</active>
    <errorConditionFormula>!ISNULL( Reserve_LAE__c ) &amp;&amp; 
 Reserve_LAE__c &lt;0</errorConditionFormula>
    <errorDisplayField>Reserve_LAE__c</errorDisplayField>
    <errorMessage>LAE Reserve cannot be Negative!</errorMessage>
</ValidationRule>