force-app/main/default/objects/Policy_Claim__c/validationRules/Claim_ReserveLoss_must_be_possitive.validationRule-meta.xml
<ValidationRule>
    <fullName>Claim_ReserveLoss_must_be_possitive</fullName>
    <active>false</active>
    <errorConditionFormula>!ISNULL( Reserve_Loss__c ) &amp;&amp; 
 Reserve_Loss__c &lt;0</errorConditionFormula>
    <errorDisplayField>Reserve_Loss__c</errorDisplayField>
    <errorMessage>Loss Reserve cannot be Negative!</errorMessage>
</ValidationRule>