force-app/main/default/objects/Policy_Claim__c/validationRules/Either_County_or_State_should_selected.validationRule-meta.xml
<ValidationRule>
    <fullName>Either_County_or_State_should_selected</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISBLANK(GEO_Factor__c),
    ISBLANK(State__c)
)</errorConditionFormula>
    <errorMessage>Either Venue or State needs to be selected.</errorMessage>
</ValidationRule>