force-app/main/default/objects/Policy_Claim__c/validationRules/Loss_Reserve_Stop_for_Inactive_Policy.validationRule-meta.xml
<ValidationRule>
    <fullName>Loss_Reserve_Stop_for_Inactive_Policy</fullName>
    <active>false</active>
    <description>If Policy is inactive then stop set reserve for Loss.</description>
    <errorConditionFormula>Not(Policy__r.Active__c) &amp;&amp;
! ISBLANK(Reserve_Loss__c)</errorConditionFormula>
    <errorDisplayField>Reserve_Loss__c</errorDisplayField>
    <errorMessage>Loss Reserve cannot be set for an Inactive Policy!</errorMessage>
</ValidationRule>