force-app/main/default/objects/Policy_Claim__c/validationRules/Occur_Date_Cant_be_greater_than_today.validationRule-meta.xml
<ValidationRule>
    <fullName>Occur_Date_Cant_be_greater_than_today</fullName>
    <active>true</active>
    <errorConditionFormula>Occur_Date__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Occur_Date__c</errorDisplayField>
    <errorMessage>&apos;Occurrence Date&apos; should not be Greater than today.</errorMessage>
</ValidationRule>