force-app/main/default/objects/Policy_Claim__c/validationRules/Occur_Date_VR_notgreater_than_currect_Dt.validationRule-meta.xml
<ValidationRule>
    <fullName>Occur_Date_VR_notgreater_than_currect_Dt</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(ISPICKVAL(File_Type__c, &quot;Memo&quot;) ) &amp;&amp; 
!ISNULL(  Occur_Date__c  ) &amp;&amp;
Occur_Date__c &gt;   TODAY()</errorConditionFormula>
    <errorDisplayField>Occur_Date__c</errorDisplayField>
    <errorMessage>&apos;Occur Date&apos; should not be greater than &apos;Current Date&apos;!</errorMessage>
</ValidationRule>