force-app/main/default/objects/Policy_Claim__c/validationRules/PolicyReminBal_not_exceed_by_ReserveLAE.validationRule-meta.xml
<ValidationRule>
    <fullName>PolicyReminBal_not_exceed_by_ReserveLAE</fullName>
    <active>false</active>
    <description>LAE amount not exceed from Policy Remaining balance.</description>
    <errorConditionFormula>!ISNULL(  Reserve_LAE__c ) &amp;&amp; 
Reserve_LAE__c &gt; Policy__r.Policy_Remaining_By_All_Claims__c</errorConditionFormula>
    <errorDisplayField>Reserve_LAE__c</errorDisplayField>
    <errorMessage>LAE Reserve cannot exceed Remaining limits of a Policy!</errorMessage>
</ValidationRule>