force-app/main/default/objects/Policy_Claim__c/validationRules/PolicyReminBal_not_exceed_by_ReserveLoss.validationRule-meta.xml
<ValidationRule>
    <fullName>PolicyReminBal_not_exceed_by_ReserveLoss</fullName>
    <active>false</active>
    <description>Loss amount not exceed from Policy Remaining balance.</description>
    <errorConditionFormula>!ISNULL( Reserve_Loss__c ) &amp;&amp; 
 Reserve_Loss__c &gt; Policy__r.Policy_Remaining_By_All_Claims__c</errorConditionFormula>
    <errorDisplayField>Reserve_Loss__c</errorDisplayField>
    <errorMessage>Loss Reserve cannot exceed Remaining limits of a Policy!</errorMessage>
</ValidationRule>