force-app/main/default/objects/Policy_Claim__c/validationRules/Report_Date_Cant_be_greater_than_today.validationRule-meta.xml
<ValidationRule>
    <fullName>Report_Date_Cant_be_greater_than_today</fullName>
    <active>true</active>
    <errorConditionFormula>Report_Date__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Report_Date__c</errorDisplayField>
    <errorMessage>&apos;Report Date&apos; should not be Greater than today.</errorMessage>
</ValidationRule>