force-app/main/default/objects/Policy_Claim__c/validationRules/Report_Date_not_less_than_Prior_Acts.validationRule-meta.xml
<ValidationRule>
    <fullName>Report_Date_not_less_than_Prior_Acts</fullName>
    <active>false</active>
    <description>Report Date cannot be less than Prior Acts Date.</description>
    <errorConditionFormula>NOT(ISPICKVAL(File_Type__c, &quot;Memo&quot;) ) &amp;&amp; 
!ISNULL( Report_Date__c ) &amp;&amp; 
!ISNULL( Policy__r.Policy_Retroactive_Date__c ) &amp;&amp; 
(Report_Date__c &lt; Policy__r.Policy_Retroactive_Date__c)</errorConditionFormula>
    <errorDisplayField>Report_Date__c</errorDisplayField>
    <errorMessage>Report Date cannot be less than related Policy&apos;s Prior Acts Date!</errorMessage>
</ValidationRule>