force-app/main/default/objects/Policy_Claim__c/validationRules/Report_Date_Validation_4_ERE_MiniTaildt.validationRule-meta.xml
<ValidationRule>
    <fullName>Report_Date_Validation_4_ERE_MiniTaildt</fullName>
    <active>false</active>
    <description>In case ERE &amp; Mini Tail exists</description>
    <errorConditionFormula>NOT(ISPICKVAL(File_Type__c, &quot;Memo&quot;) ) &amp;&amp; 
!ISNULL( Report_Date__c ) &amp;&amp;
!ISNULL(Policy__r.ERE_Date__c) &amp;&amp;
!ISNULL(Policy__r.Mini_Tail_Override_Date__c) &amp;&amp;
Report_Date__c &gt; Policy__r.ERE_Date__c &amp;&amp;
Report_Date__c &gt; Policy__r.Mini_Tail_Override_Date__c</errorConditionFormula>
    <errorDisplayField>Report_Date__c</errorDisplayField>
    <errorMessage>Report Date should not be greater than related Policy&apos;s &apos;ERE&apos; Date&apos; or Policy&apos;s &apos;Mini Tail Date&apos;!</errorMessage>
</ValidationRule>