force-app/main/default/objects/Policy_Claim__c/validationRules/Report_Date_Validation_Rule_Eff_Exp_Dt.validationRule-meta.xml
<ValidationRule>
    <fullName>Report_Date_Validation_Rule_Eff_Exp_Dt</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(ISPICKVAL(File_Type__c, &quot;Memo&quot;) ) &amp;&amp; 
!ISNULL( Report_Date__c ) &amp;&amp;
 OR(Report_Date__c&lt; Policy__r.Effective_Date__c ,
    Report_Date__c&gt;  Policy__r.Expiration_Date__c )&amp;&amp;
ISNULL(Policy__r.Mini_Tail_Override_Date__c) &amp;&amp;
ISNULL(Policy__r.ERE_Date__c)</errorConditionFormula>
    <errorDisplayField>Report_Date__c</errorDisplayField>
    <errorMessage>&apos;Report Date&apos; should not be Less than Policy&apos;s &apos;Effective Date&apos; and Greater than Policy&apos;s &apos;Expiry Date&apos;!</errorMessage>
</ValidationRule>