force-app/main/default/objects/Policy_Claim__c/validationRules/Report_Date_VR_Expire_Mininull_EREnonull.validationRule-meta.xml
<ValidationRule>
    <fullName>Report_Date_VR_Expire_Mininull_EREnonull</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISPICKVAL(File_Type__c, &quot;Memo&quot;) ) &amp;&amp; 
!ISNULL( Report_Date__c ) &amp;&amp;
ISNULL(Policy__r.Mini_Tail_Override_Date__c) &amp;&amp;
!ISNULL(Policy__r.ERE_Date__c ) &amp;&amp;
Report_Date__c &gt; Policy__r.ERE_Date__c</errorConditionFormula>
    <errorDisplayField>Report_Date__c</errorDisplayField>
    <errorMessage>&apos;Report Date&apos; should not be Greater than Policy&apos;s &apos;ERE Date&apos;!</errorMessage>
</ValidationRule>