force-app/main/default/objects/Policy_Claim__c/validationRules/ReportDateCannotBePreviousYear.validationRule-meta.xml
<ValidationRule>
    <fullName>ReportDateCannotBePreviousYear</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(AND(NOT(AND(DAY(TODAY())&gt;=1,                      
                   DAY(TODAY())&lt;=17,         
                   MONTH(TODAY())==1)),
           (YEAR( Report_Date__c ) &lt; YEAR(TODAY())) ),
       AND(AND(DAY(TODAY())&gt;=1,                      
               DAY(TODAY())&lt;=17,         
               MONTH(TODAY())==1),
           (YEAR( Report_Date__c ) &lt; YEAR(TODAY())-1) )),
    ISNEW() )</errorConditionFormula>
    <errorDisplayField>Report_Date__c</errorDisplayField>
    <errorMessage>Report Date shouldn&apos;t be previous year, if Today is not between the first 10 days of this year.</errorMessage>
</ValidationRule>