force-app/main/default/objects/Policy_Claim__c/validationRules/ReportDateShouldnotLTPolicyEffectiveDate.validationRule-meta.xml
<ValidationRule>
    <fullName>ReportDateShouldnotLTPolicyEffectiveDate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Report_Date__c &lt; Policy__r.Effective_Date__c,
    ISNEW() )</errorConditionFormula>
    <errorDisplayField>Report_Date__c</errorDisplayField>
    <errorMessage>&apos;Report Date&apos; should not be Less than Policy&apos;s &apos;Effective Date&apos;!</errorMessage>
</ValidationRule>