force-app/main/default/objects/Policy_Claim__c/validationRules/Reserve_LAE_could_not_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Reserve_LAE_could_not_changed</fullName>
    <active>false</active>
    <errorConditionFormula>ISCHANGED(Reserve_LAE__c)</errorConditionFormula>
    <errorDisplayField>Reserve_LAE__c</errorDisplayField>
    <errorMessage>&apos;Open Reserve LAE&apos; amount cannot be changed!</errorMessage>
</ValidationRule>