force-app/main/default/objects/Policy_Claim__c/validationRules/Reserve_Loss_could_not_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Reserve_Loss_could_not_changed</fullName>
    <active>false</active>
    <errorConditionFormula>ISCHANGED(Reserve_Loss__c)</errorConditionFormula>
    <errorDisplayField>Reserve_Loss__c</errorDisplayField>
    <errorMessage>&apos;Open Reserve Loss&apos; amount cannot be changed!</errorMessage>
</ValidationRule>