force-app/main/default/objects/Policy_Claim__c/validationRules/Which_Claim_Type_Not_AllowFor_ReserveLAE.validationRule-meta.xml
<ValidationRule>
    <fullName>Which_Claim_Type_Not_AllowFor_ReserveLAE</fullName>
    <active>false</active>
    <errorConditionFormula>Not(ISNULL(Reserve_LAE__c)) &amp;&amp;
OR( 
ISPICKVAL(File_Type__c, &apos;ARDC Complaint&apos;), 
ISPICKVAL(File_Type__c, &apos;Memo&apos;) 
)</errorConditionFormula>
    <errorDisplayField>Reserve_LAE__c</errorDisplayField>
    <errorMessage>Reserve cannot be set for &apos;ARDC&apos; or &apos;Memo&apos; types!</errorMessage>
</ValidationRule>