force-app/main/default/objects/Policy_Claim__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>File_Type__c</columns>
    <columns>Report_Date__c</columns>
    <columns>Lawyer_Name__c</columns>
    <columns>Policy__c</columns>
    <columns>Policy_Effective_Date__c</columns>
    <columns>Policy_Cancel_Date__c</columns>
    <columns>Firm_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>