force-app/main/default/objects/Policy_Claim__c/listViews/Closed_Claims.listView-meta.xml
<ListView>
    <fullName>Closed_Claims</fullName>
    <columns>NAME</columns>
    <columns>File_Type__c</columns>
    <columns>Report_Date__c</columns>
    <columns>Lawyer_Name__c</columns>
    <columns>Policy__c</columns>
    <columns>Policy_Effective_Date__c</columns>
    <columns>Policy_Cancel_Date__c</columns>
    <columns>Firm_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Claim_Status__c</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <label>Closed Claims</label>
</ListView>